--- a/modules/local-web-server/pom.xml
+++ b/modules/local-web-server/pom.xml
@@ -18,9 +18,26 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>gov.cdc.tn93</groupId>
+            <artifactId>gui-app</artifactId>
+            <version>0.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../gui-app/target/gui-app-0.1.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>../gui-app/target/classes/TN93/TN93.class</additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
