--- a/modules/gui-app/pom.xml
+++ b/modules/gui-app/pom.xml
@@ -39,7 +39,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>tn93</finalName>
+                    <finalName>../../../tn93</finalName>
                     <archive>
                         <manifest>
                             <mainClass>Main</mainClass>
